# stm32

./: Cargo.toml  README.md
debug/: openocd.cfg  openocd.gdb
src/: main.rs
